# raspi-kvm

./: .gitignore  .project  README.md
control/cli/: inject.py
control/pi4/: channels.example.json  daemon.py  inject.py  udev-rules-example.rules
docs/ai/: architecture.md  original-answer.md  requirements.md
docs/hardware/: amazon-order-2026-04-08.md  bom.md  poc-plan.md  wiring.md
docs/protocol/: hid-notes.md  uart-protocol.md
firmware/attiny85/: README.md
firmware/pi-zero/: gadget_setup.sh
firmware/rp2350/: CMakeLists.txt  README.md
firmware/rp2350/include/: uart_protocol.h
firmware/rp2350/src/: main.c  uart_protocol.c  usb_descriptors.c
hardware/: bom.md  wiring.md
scripts/: build_rp2350.sh  setup_pi.sh
